# syclacademy

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING  LICENSE.md  README.md  generate-curriculum.sh
Code_Exercises/: CMakeLists.txt  adaptivecp.md  adaptivecpp.md  devcloud.md  devcloudJupyter.md  dpc.md  dpcpp.md  helpers.hpp  run_all.sh  sub.sh
Code_Exercises/9_sycl_of_hell/: 0_tiny_sycl_info.cpp  1_my_first_kernel.cpp  2_parallel_for.cpp  3_nd_range.cpp  4_memory.cpp  5_copy_device_to_host.cpp  6_in_order.cpp  7_out_of_order.cpp  8_reduction.cpp  CMakeLists.txt  Makefile  README.md
Code_Exercises/Advanced_Data_Flow/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Asynchronous_Execution/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Coalesced_Global_Memory/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Compiling_with_SYCL/: CMakeLists.txt  README.md
Code_Exercises/Data_Parallelism/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Data_and_Dependencies/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Device_Discovery/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Device_Selection/: CMakeLists.txt  README.md
Code_Exercises/Enqueueing_a_Kernel/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_01_Big_Hello_SYCL/: CMakeLists.txt  README.md  solution.cpp  tiny.cpp
Code_Exercises/Exercise_01_Compiling_with_SYCL/: CMakeLists.txt  README.md  doc.md  q  solution.cpp  source.cpp
Code_Exercises/Exercise_01_Hello_SYCL/: README.md  source.cpp
Code_Exercises/Exercise_02_Data_Management/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_02_First_Kernel/: README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_02_Hello_World/: CMakeLists.txt  README.md  doc.md  run.sh  solution.cpp  source.cpp
Code_Exercises/Exercise_02_In_Order_Queue/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_03A_USM_Intro/: README.md  source.cpp
Code_Exercises/Exercise_03_Error_Handling/: CMakeLists.txt  README.md  solution.cpp  source.cpp  test_for_kernel_assert_support.cpp
Code_Exercises/Exercise_03_Load_Balancing/: CMakeLists.txt  README.md  solution.cpp
Code_Exercises/Exercise_03_Scalar_Add/: CMakeLists.txt  README.md  doc.md  run.sh  solution.cpp  source.cpp
Code_Exercises/Exercise_03_Vector_Add/: README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_04_Device_Selections/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_04_Handling_Errors/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_04_ND_Range_Kernel/: README.md  run.sh  solution.cpp  source.cpp
Code_Exercises/Exercise_04_SYCL_Reduction/: CMakeLists.txt  Makefile  README.md  reduce_atomic  reduce_atomic.cpp  reduce_group_algorithms  reduce_group_algorithms.cpp  reduce_naive  reduce_naive.cpp  reduce_sycl_reduction  reduce_sycl_reduction.cpp
Code_Exercises/Exercise_05_Device_Selection/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_05_Image_Convolution/: CMakeLists.txt  README.md  reference.cpp  run.sh  solution.cpp  source.cpp
Code_Exercises/Exercise_05_Profiling/: README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_05_Vector_Add/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_06_Coalesced_Global_Memory/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_06_Synchronization/: README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_06_Vector_Add/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_07_ND_Range_Kernel/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_07_USM_Selector/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_07_Vectors/: CMakeLists.txt  README.md  source.cpp
Code_Exercises/Exercise_08_Local_Memory_Tiling/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_08_Matrix_Transpose/: CMakeLists.txt  README.md  solution.cpp  source.cpp
Code_Exercises/Exercise_08_USM_Vector_Add/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_09_Synchronization/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_10_Managing_Dependencies/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_11_In_Order_Queue/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_12_Temporary_Data/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_13_Load_Balancing/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_14_ND_Range_Kernel/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_15A_SYCL_Reduction/: Makefile  README.md  reduce_atomic.cpp  reduce_group_algorithms.cpp  reduce_naive.cpp  reduce_sycl_reduction.cpp
Code_Exercises/Exercise_15_Image_Convolution/: CMakeLists.txt  README.md  doc.md  reference.cpp
Code_Exercises/Exercise_16_Coalesced_Global_Memory/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_17_Vectors/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_18A_Matrix_Transpose/: solution.cpp  source.cpp
Code_Exercises/Exercise_18_Local_Memory_Tiling/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_19_Work_Group_Sizes/: CMakeLists.txt  README.md  doc.md  solution.cpp  source.cpp
Code_Exercises/Exercise_1_Getting_Started/: CMakeLists.txt  doc.md  hello_world.cpp
Code_Exercises/Exercise_20_SYCL_Reduction/: Makefile  README.md  reduce_atomic  reduce_atomic.cpp  reduce_group_algorithms  reduce_group_algorithms.cpp  reduce_naive  reduce_naive.cpp  reduce_sycl_reduction  (+1 more)
(+434 files in other folders)
